Added CORS, axios and semantic-ui

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,11 +5,12 @@
   "dependencies": {
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "typescript": "^3.8.3"
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
