Added mobx and refactored the initial loading of the events

--- a/client-app/package.json
+++ b/client-app/package.json
@@ -7,10 +7,13 @@
     "@types/react-dom": "^16.9.5",
     "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
+    "mobx": "^5.15.4",
+    "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
-    "semantic-ui-react": "^0.88.2"
+    "semantic-ui-react": "^0.88.2",
+    "typescript": "^3.8.3"
   },
   "scripts": {
     "start": "react-scripts start",
