--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,6 +11,7 @@
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2",
     "typescript": "^3.8.3"
