--- a/client-app/package.json
+++ b/client-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
     "mobx": "^5.15.4",
