--- a/client-app/package.json
+++ b/client-app/package.json
@@ -8,6 +8,7 @@
     "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
+    "formik": "^2.1.4",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^1.5.2",
     "react": "^16.13.1",
