--- a/client-app/package.json
+++ b/client-app/package.json
@@ -6,6 +6,7 @@
     "@types/react": "^16.9.25",
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
+    "@types/yup": "^0.26.35",
     "axios": "^0.19.2",
     "cra-template-typescript": "1.0.3",
     "formik": "^2.1.4",
@@ -16,7 +17,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "semantic-ui-react": "^0.88.2",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
